kubernetes/algod-relay/aramid-relay/fi-1-aramid-relay/h2-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aramid-relay-mainnet
---
apiVersion: v1
kind: Service
metadata:
  name: aramid-set-service-h2
  namespace: aramid-relay-mainnet
spec:
  type: NodePort
  selector:
    app: aramid-relay-mainnet-h2
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 14260
      nodePort: 14260
      targetPort: 14260
---
apiVersion: v1
kind: Service
metadata:
  name: aramid-set-service-data-h2
  namespace: aramid-relay-mainnet
spec:
  type: ClusterIP
  selector:
    app: aramid-relay-mainnet-h2
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 18280
      targetPort: 18280
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aramidmain-algod-ingress
  namespace: aramid-relay-mainnet
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - aramidmain-algod.h2.scholtz.sk
    secretName: tls-aramidmain-algod
  rules:
  - host: aramidmain-algod.h2.scholtz.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aramid-set-service-data-h2
            port:
              number: 18280
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: aramidmain-algod-2-ingress
#  namespace: aramid-relay-mainnet
#  annotations: 
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#    cert-manager.io/cluster-issuer: letsencrypt
#spec:
#  tls:
#  - hosts:
#    - aramidmain-algod.h2-2.scholtz.sk
#    secretName: tls-aramidmain-algod-2
#  rules:
#  - host: aramidmain-algod.h2-2.scholtz.sk
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: aramid-set-service-data-h2
#            port:
#              number: 18280
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aramidmain-algod-3-ingress
  namespace: aramid-relay-mainnet
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - algod.aramidmain.a-wallet.net
    secretName: tls-aramidmain-algod-3
  rules:
  - host: algod.aramidmain.a-wallet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aramid-set-service-data-h2
            port:
              number: 18280
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relaynode-2
  namespace: aramid-relay-mainnet
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aramid-relay-mainnet-h2
  template:
    metadata:
      labels:
        app: aramid-relay-mainnet-h2
        lb: aramid-relay-mainnet
    spec:
      nodeName: sch-h-02
      containers:
        - name: aramid-relay-mainnet-h2
          image: scholtz2/aramid-algo-node:v3.15.1-stable
          imagePullPolicy: Always
          resources:
            requests:
              memory: "6000Mi"
              cpu: "6000m"
            limits:
              memory: "20000Mi"
              cpu: "32000m"
          #command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
          #command:
          #  - /bin/bash
          #  - /app/run.sh
              
          startupProbe:
            exec:
              command:
              - /bin/bash
              - /app/health.sh
            initialDelaySeconds: 10
            periodSeconds: 10   
            failureThreshold: 1000
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10   
            failureThreshold: 100
          livenessProbe:
              tcpSocket:
                port: 18280
              initialDelaySeconds: 15
              periodSeconds: 20
          ports:
            - containerPort: 14260
              protocol: TCP
            - containerPort: 18280
              protocol: TCP
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: aramid-main-vol-root-h2
              mountPath: /app/data
            - name: aramid-main-vol-net-h2
              mountPath: /app/data/aramidmain-v1.0
            - name: aramid-main-vol-catchpoints-h2
              mountPath: /app/data/aramidmain-v1.0/catchpoints
      volumes:
        - name: aramid-main-vol-root-h2
          persistentVolumeClaim:
            claimName: aramid-main-vol-root-h2
        - name: aramid-main-vol-net-h2
          persistentVolumeClaim:
            claimName: aramid-main-vol-net-h2
        - name: aramid-main-vol-catchpoints-h2
          persistentVolumeClaim:
            claimName: aramid-main-vol-catchpoints-h2
